# redmine

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md  readme.md
generate/include/: defines.h.cmake  redmine_config.h.cmake
include/: args.h  command_line.h  config.h  enumeration.h  enumeration.hpp  error.h  http.h  issue.h  membership.h  project.h  project_membership.hpp  query.h  redmine.h  request.h  role.h  tracker.h  tracker.hpp  user.h  util.h  version.h  version.hpp
include/json/: json.hpp
source/: args.cpp  command_line.cpp  config.cpp  enumeration.cpp  enumerations.cpp  http.cpp  issue.cpp  json.cpp  membership.cpp  project.cpp  project_membership.cpp  query.cpp  redmine.cpp  request.cpp  role.cpp  tracker.cpp  user.cpp  util.cpp  version.cpp
test/json/: test0.0.json
